pagina de inicio

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Encriptador De Texto/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Encriptador De Texto</title>
 </head>
 <body>
-    
+    <header>
+        <img class="logo-alura" src="img/Vector.svg" alt="logo-alura">
+    </header>
+
+    <main>
+        <input class="ingreseTextoAqui" type="text" value="Ingrese texto aqui" >
+        
+        <div class="rectangulo">
+            <img src="img/Muñeco.svg" alt="dibujo-muñeco">
+            <div class="contenedorMensajesRectangulo">
+                <p class="ningunMensajeEncontrado">Ningún mensaje fue encontrado</p>
+                <p class="ingreseElTexto">Ingresa el texto que desees encriptar o desencriptar.</p>
+            </div>
+        </div>
+
+    </main>
 </body>
 </html>
