pagina de inicio terminada

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </div>
         </div>
 
+        <div class="contenedorAdvertencia">
+                <img class="signoExclamacion" src="img/bi_exclamation-circle-fill.svg" alt="signo-exclamacion">
+                <p class="textoAdvertencia">Solo letras minusculas y sin acentos</p>
+        </div>
+
+        <div class="contenedorBotones">
+            <button class="boton botonEncriptar">Encriptar</button>
+            <button class="boton botonDesencriptar">Desencriptar</button>
+        </div>
+
     </main>
 </body>
 </html>
