--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-        <input class="ingreseTextoAqui" type="text" value="Ingrese texto aqui" >
+        <input class="ingreseTextoAqui" type="text" placeholder="Ingrese texto aqui" id="textoSinEncriptar">
         <aside class="rectangulo">
             <img src="img/Muñeco.svg" alt="dibujo-muñeco">
             <section class="contenedorMensajesRectangulo">
@@ -22,10 +22,10 @@
             </section>
         </aside>
         
-        <aside class="rectangulo2">
-            <textarea class="textarea" name="" id="" cols="30" rows="10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa sint, sit quo incidunt suscipit nam repellat necessitatibus aliquid laudantium eum? Magni impedit, nulla non reiciendis repellendus error minus temporibus sunt!</textarea>
+        <aside id="rectangulo2" class="rectangulo2">
+            <textarea id="textoEncriptado" class="textarea" cols="30" rows="10" readonly>texto</textarea>
             
-            <button class="botonCopiar" type="text">Copiar</button>
+            <button id="botonCopiar" class="botonCopiar" type="text" >Copiar</button>
         </aside>
 
         <section class="contenedorAdvertencia">
@@ -34,10 +34,14 @@
         </section>
 
         <section class="contenedorBotones">
-            <button class="boton botonEncriptar">Encriptar</button>
-            <button class="boton botonDesencriptar">Desencriptar</button>
+            <button id="botonEncriptar" onclick="encriptar()" class="boton botonEncriptar">Encriptar</button>
+            <button class="boton botonDesencriptar" onclick="desencriptar()">Desencriptar</button>
         </section>
 
     </main>
+
+
+
+    <script src="main.js"></script>
 </body>
 </html>
