cambios en la logica

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-        <input class="ingreseTextoAqui" type="text" placeholder="Ingrese texto aqui" id="textoSinEncriptar">
+        <input class="ingreseTextoAqui" type="text" value="Ingrese texto aqui" id="textoSinEncriptar">
         
         <aside class="rectangulo">
             <img src="img/Muñeco.svg" alt="dibujo-muñeco">
