se agrego sweetalert2 y se esta trabajando en la logica del boton copiar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="img/Muñeco.svg" alt="dibujo-muñeco">
             <section class="contenedorMensajesRectangulo">
                 <p class="ningunMensajeEncontrado">Ningún mensaje fue encontrado</p>
-                <p class="ingreseElTexto">Ingresa el texto que desees encriptar o desencriptar.</p>
+                <p class="mensajeRecuadro">Ingresa el texto que desees encriptar o desencriptar.</p>
             </section>
         </aside>
         
